--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ scheduled_packer_build:
   script:
     - echo "Scheduled build of $BUILD, proceeding.";
     - ./packer init $BUILD;
-    - ./packer build -var-file=vsphere/vsphere.pkrvars.hcl $BUILD
+    - ./packer build $BUILD
   parallel:
     matrix:
       - BUILD:
@@ -72,7 +72,7 @@ merge_packer_build:
         if (git diff --name-only $CI_COMMIT_SHA~ $CI_COMMIT_SHA | grep -q "^$BUILD/"); then
           echo "Changes detected in $BUILD, proceeding with build.";
           ./packer init $BUILD;
-          ./packer build -var-file=vsphere/vsphere.pkrvars.hcl $BUILD
+          ./packer build $BUILD
         else
           echo "No changes in $BUILD, skipping build.";
           exit 0;
