--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,8 +37,8 @@ scheduled_packer_build:
   stage: build
   script:
     - echo "Scheduled build of $BUILD, proceeding.";
-    - ./packer init $BUILD;
-    - ./packer build $BUILD
+    - packer init $BUILD;
+    - packer build $BUILD
   parallel:
     matrix:
       - BUILD:
@@ -59,8 +59,8 @@ merge_packer_build:
     - |-
         if (git diff --name-only $CI_COMMIT_SHA~ $CI_COMMIT_SHA | grep -q "^$BUILD/"); then
           echo "Changes detected in $BUILD, proceeding with build.";
-          ./packer init $BUILD;
-          ./packer build $BUILD
+          packer init $BUILD;
+          packer build $BUILD
         else
           echo "No changes in $BUILD, skipping build.";
           exit 0;
